[gd_scene load_steps=3 format=3 uid="uid://qyxbkvju2fbb"]

[ext_resource type="PackedScene" uid="uid://ctfgfelg0sho8" path="res://src/Tools/BaseTool.tscn" id="1"]
[ext_resource type="Script" path="res://src/Tools/UtilityTools/Zoom.gd" id="2"]

[node name="ToolOptions" instance=ExtResource("1")]
script = ExtResource("2")

[node name="Mode" type="Label" parent="." index="2"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Mode:"

[node name="ModeOptions" type="OptionButton" parent="." index="3"]
custom_minimum_size = Vector2(92, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
item_count = 2
popup/item_0/text = "Zoom out"
popup/item_0/id = 0
popup/item_1/text = "Zoom in"
popup/item_1/id = 1

[node name="Options" type="Label" parent="." index="4"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Options:"

[node name="FitToFrame" type="Button" parent="." index="5"]
custom_minimum_size = Vector2(92, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Fit to frame"

[node name="100%" type="Button" parent="." index="6"]
custom_minimum_size = Vector2(92, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "100% Zoom"

[connection signal="item_selected" from="ModeOptions" to="." method="_on_ModeOptions_item_selected"]
[connection signal="pressed" from="FitToFrame" to="." method="_on_FitToFrame_pressed"]
[connection signal="pressed" from="100%" to="." method="_on_100_pressed"]
